more work on the web if

--- a/web/src/locales/de/index.json
+++ b/web/src/locales/de/index.json
@@ -1,26 +1,26 @@
 {
-    "langcode": "en",
-    "title": "ESP-CLOCK",
-    "description": "This is a digital LED-Wallclock",
-    "savebutton": "Save",
-    "current_time": "Current time",
-    "enable_js": "ENABLE JAVASCRIPT TO CONFIGURE THE CLOCK",
+    "langcode": "de",
+    "title": "ESP-UHR",
+    "description": "Dies ist eine digitale Wanduhr",
+    "savebutton": "Speichern",
+    "current_time": "Uhrzeit",
+    "enable_js": "AKTIVIEREN SIE JAVASCRIPT UM DIE UHR ZU KONFIGURIEREN",
     "nav": {
-        "color": "Color",
-        "time": "Time",
+        "color": "Farben",
+        "time": "Zeit",
         "sys": "System"
     },
-    "color_day": "Colors in the day.",
-    "color_night": "Colors in the night.",
-    "hour": "Hour",
+    "color_day": "Farben am Tag",
+    "color_night": "Farben in der Nacht",
+    "hour": "Stunde",
     "minute": "Minute",
-    "second": "Second",
-    "weekday": "Weekday",
-    "month": "Month",
-    "date": "Date",
-    "restart_required": "Requires restart",
+    "second": "Sekunde",
+    "weekday": "Wochentag",
+    "month": "Monat",
+    "date": "Datum",
+    "restart_required": "Neustart erforderlich",
     "colorconfig": {
-        "title": "Color configuration",
+        "title": "Farbeinstellungen",
         "description": "Here you can configure the color and behaviour of the LED clock hands.",
         "backlight": {
             "enable": "Enable background light",
