fix typo in web interface

--- a/web/src/locales/de/index.json
+++ b/web/src/locales/de/index.json
@@ -43,7 +43,7 @@
         "fluidmotion": "Flüssige Bewegung des Sekundenzeigers einschalten.",
         "hourdot": "Stunden mit einem Punkt markieren.",
         "hourquarter": "Jedes Viertel mit einem Punkt markieren.",
-        "hoursegment": "Das akutelle Stundensegment beleuchten."
+        "hoursegment": "Das aktuelle Stundensegment beleuchten."
     },
     "timeconfig": {
         "title": "Zeit-Einstellungen",
